--- a/app/views/client/profile/wishlist.html.erb
+++ b/app/views/client/profile/wishlist.html.erb
@@ -1,7 +1,7 @@
 <script>$('body').attr('id', 'profile-wishlist-page');</script>
 <script>$('body').addClass('profile-page');</script>
 
-<%= render partial: "client/profile/parts/profile_nav" %>
+<%= render partial: "layouts/parts/nav" %>
 <script>$('#profile-nav #menu-wishlist').addClass('active');</script>
 
 <div class="section">
