--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -1,6 +1,6 @@
 <script>$('body').attr('id', 'organizer-event-list').addClass('organizer-event-page');</script>
 
-<%= render partial: "organizer/parts/organizer-nav" %>
+<%= render partial: "layouts/parts/nav" %>
 <script>$('#organizer-nav #menu-event-list').addClass('active');</script>
 
 <div class="section" id="event-list-section">
