--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -1,7 +1,7 @@
 <script>$('body').attr('id', 'profile-ticket-list-page');</script>
 <script>$('body').addClass('profile-page');</script>
 
-<%= render partial: "client/profile/parts/profile_nav" %>
+<%= render partial: "layouts/parts/nav" %>
 <script>$('#profile-nav #menu-my-tickets').addClass('active');</script>
 
 <div class="section" id="ticket-list-section">
