--- a/app/views/organizer/events/checkin.html.erb
+++ b/app/views/organizer/events/checkin.html.erb
@@ -1,6 +1,6 @@
 <script>$('body').attr('id', 'organizer-event-checkin').addClass('organizer-event-page');</script>
 
-<%= render partial: "organizer/parts/organizer-nav" %>
+<%= render partial: "layouts/parts/nav" %>
 <script>
   $('#organizer-nav #menu-event-list').addClass('active');
   $('.organizer-event-nav .organizer-event-nav-check-in').addClass('active');
