--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "organizer/parts/organizer-nav" %>
+<%= render partial: "layouts/parts/nav" %>
 <script>$('#organizer-nav #menu-event-list').addClass('active');</script>
 
 <div class="section">
