--- a/app/assets/stylesheets/pages/organizer.sass
+++ b/app/assets/stylesheets/pages/organizer.sass
@@ -8,6 +8,10 @@ $gray-color-e: #eee
 
 $green-color: #19D4D6
 
+
+.section-body
+  margin-bottom: 40px
+
 #organizer-event-list
   #event-list-section
     .container
