--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -9,13 +9,12 @@
 
 <div class="section">
   <div class="container">
-    <div class="row">
+    <div class="section-header row"></div>
+    <div class="section-body row">
       <div class="col-xs-12">
-        <div style="padding: 40px 0px">
-          <%= form_tag organizer_events_path(@event), multipart: true, 'data-parsley-validate': true do %>
-            <%= render partial: "organizer/parts/event_form" %>
-          <% end %>
-        </div>
+        <%= form_tag organizer_events_path(@event), multipart: true, 'data-parsley-validate': true do %>
+          <%= render partial: "organizer/parts/event_form" %>
+        <% end %>
       </div>
     </div>
   </div>
