--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -3,6 +3,7 @@
             <div class="form-header">
               <h1 class="form-title">1. Event Detail
                 <span style="font-size: 14px;">
+                by <b><%= "#{@event.user.first_name} #{@event.user.last_name}" %></b> and status is
                 <% if @event.status.published? %>
                   <i class="fa fa-check-circle" aria-hidden="true"></i> <%= @event.status %>
                 <% else %>
@@ -16,7 +17,7 @@
               <div class="form-body row">
                 <div class="col-xs-12 col-md-6">
                   <div class="form-group">
-                    <label>Organizer</label>
+                    <label>Organizer </label> &nbsp;
                     <select name="organizer">
                       <option name="">Select organizer</option>
                       <% @organizer.each do |organizer| %>
