--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -2,14 +2,16 @@
           <div class="form-section">
             <div class="form-header">
               <h1 class="form-title">1. Event Detail
+                <% if @event.user.present? %>
                 <span style="font-size: 14px;">
-                by <b><%= "#{@event.user.first_name} #{@event.user.last_name}" %></b> and status is
+                <%= "by <b> #{@event.user.try(:first_name)} #{@event.user.try(:last_name)}</b> and ".html_safe %>status is
                 <% if @event.status.published? %>
                   <i class="fa fa-check-circle" aria-hidden="true"></i> <%= @event.status %>
                 <% else %>
                   <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> <%= @event.status %>
                 <% end %>
                 </span>
+                <% end %>
               </h1>
             </div>
 
