--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -18,6 +18,7 @@
                   <h4 class="title"><%= event.title %></h4>
                   <div class="meta date"><%#= event.sections.first.try.event_time.strftime("%d %B %Y, %H:%M") %></div>
                   <div class="meta location"><%= event.location_name %></div>
+                  <div class="meta">By <%= "#{event.user.company}" %></div>
                 </div>
                 <div class="info-footer">
                   <div class="row">
