--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -41,6 +41,7 @@
                 <ul class="nav navbar-nav navbar-right mobile-hide">
                   <% if current_user.can_organizer? %>
                     <li>
+                      <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
                       <div class="role-badge organizer-badge nav-badge">ORGANIZER</div>
                     </li>
                   <% end %>
