--- a/app/views/organizer/events/checkin.html.erb
+++ b/app/views/organizer/events/checkin.html.erb
@@ -21,7 +21,7 @@
         <% @sections.each do |section| %>
         <div class="event-section-panel">
           <div class="panel-header">
-            <h3>ALL ORDERS</h3>
+            <h3>Attendees / Check In</h3>
             <h4 class="panel-title"><%= section.title %> - <%= section.event_time.strftime("%d %B %Y, %H:%M") %></h4>
             <div class="row">
               <div class="col-xs-12 col-md-6">
