--- a/app/views/organizer/events/orders.html.erb
+++ b/app/views/organizer/events/orders.html.erb
@@ -20,7 +20,7 @@
       <div class="col-xs-12 col-md-10">
         <div class="event-section-panel">
           <div class="panel-header">
-            <h3>Attendees / Check In</h3>
+            <h3>ALL ORDERS</h3>
             <ul class="list-inline">
               <li>Orders: <%= @event.orders.count %></li>
               <li>Total Sales: <%= convert_to_currency @event.get_total_sales %></li>
