--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -249,8 +249,10 @@ label
   padding: 3px 15px
   background: linear-gradient(90deg, #433B8F, #2F9687)
   color: white
+.organizer-nav
+  padding: 0px !important
+  margin: 18px 5px 0px
 .nav-badge
-  margin: 20px 5px 0px
   font-size: 12px
 
 .mobile-only
