--- a/app/views/client/profile/settings.html.erb
+++ b/app/views/client/profile/settings.html.erb
@@ -2,7 +2,10 @@
 <script>$('body').addClass('profile-page');</script>
 
 <%= render partial: "layouts/parts/nav" %>
-<script>$('#profile-nav #menu-settings').addClass('active');</script>
+<script>
+  $('#organizer-nav #menu-settings').addClass('active');
+  $('#profile-nav #menu-settings').addClass('active');
+</script>
 
 <div class="section" id="profile-settings-section">
   <div class="container">
@@ -22,47 +25,50 @@
               <label>Lastname</label>
               <%= f.text_field :last_name, value: @user.last_name, class: 'form-control' %>
             </div>
-            <div class="form-group dob-form-group col-xs-12 col-md-6">
-              <label>Date of Birth</label>
-              <div class="form-inline">
-                <select class="form-control" name="dob_date" required >
-                  <option value="">Date</option>
-                  <% (1..31).each do |date| %>
-                    <option <%= "selected" if current_user.birthday.try(:day) == date %> value="<%= date %>"><%= date %></option>
-                  <% end %>
-                </select>
-                <select class="form-control" name="dob_month" required >
-                  <option value="">Month</option>
-                  <% (1..12).each do |month| %>
-                    <option <%= "selected" if current_user.birthday.try(:month) == month %> value="<%= month %>"><%= Date::MONTHNAMES[month] %></option>
-                  <% end %>
-                </select>
-                <select class="form-control" name="dob_year" required >
-                  <option value="">Year</option>
-                  <% (0..99).each do |year| %>
-                    <option <%= "selected" if current_user.birthday.try(:year) == (Time.zone.now.year - year) %> value="<%= (Time.zone.now.year - year) %>"><%= (Time.zone.now.year - year) %></option>
-                  <% end %>
-                </select>
+            <% unless @user.can_organizer? %>
+              <div class="form-group dob-form-group col-xs-12 col-md-6">
+                <label>Date of Birth</label>
+                <div class="form-inline">
+                  <select class="form-control" name="dob_date" required >
+                    <option value="">Date</option>
+                    <% (1..31).each do |date| %>
+                      <option <%= "selected" if current_user.birthday.try(:day) == date %> value="<%= date %>"><%= date %></option>
+                    <% end %>
+                  </select>
+                  <select class="form-control" name="dob_month" required >
+                    <option value="">Month</option>
+                    <% (1..12).each do |month| %>
+                      <option <%= "selected" if current_user.birthday.try(:month) == month %> value="<%= month %>"><%= Date::MONTHNAMES[month] %></option>
+                    <% end %>
+                  </select>
+                  <select class="form-control" name="dob_year" required >
+                    <option value="">Year</option>
+                    <% (0..99).each do |year| %>
+                      <option <%= "selected" if current_user.birthday.try(:year) == (Time.zone.now.year - year) %> value="<%= (Time.zone.now.year - year) %>"><%= (Time.zone.now.year - year) %></option>
+                    <% end %>
+                  </select>
+                </div>
               </div>
-            </div>
-            <div class="form-group col-xs-12 col-md-6">
-              <label>Gender</label>
-              <div class="form-inline">
-                <label>
-                  <%= f.radio_button :gender, 'male' %>
-                  Male
-                </label>
-                <label>
-                  <%= f.radio_button :gender, 'female' %>
-                  Female
-                </label>
-                <!-- <label class="radio">
-                  <input type="radio" name="gender" value="not_specific" />
-                  <%#= f.radio_button :gender %>
-                  Not specific
-                </label> -->
+              <div class="form-group col-xs-12 col-md-6">
+                <label>Gender</label>
+                <div class="form-inline">
+                  <label>
+                    <%= f.radio_button :gender, 'male' %>
+                    Male
+                  </label>
+                  <label>
+                    <%= f.radio_button :gender, 'female' %>
+                    Female
+                  </label>
+                  <!-- <label class="radio">
+                    <input type="radio" name="gender" value="not_specific" />
+                    <%#= f.radio_button :gender %>
+                    Not specific
+                  </label> -->
+                </div>
               </div>
-            </div>
+            <% end %>
+
             <div class="form-group col-xs-12 col-md-6">
               <label>E-mail</label>
               <%= f.email_field :email, value: @user.email, class: 'form-control' %>
