fix oganizer status
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/assets/stylesheets/pages/profile.sass
+++ b/app/assets/stylesheets/pages/profile.sass
@@ -106,3 +106,9 @@ $green-color: #19D4D6
         select.form-control
           display: inline-block
           width: 30%
+
+
+@media (max-width: 415px)
+  #profile-nav-section
+    #organizer-nav, #profile-nav
+      display: none
