--- a/app/assets/stylesheets/components/icon.sass
+++ b/app/assets/stylesheets/components/icon.sass
@@ -44,6 +44,13 @@
   background-image: asset-url('icons/icon-edit.png')
 .icon-unpublish
   background-image: asset-url('icons/icon-unpublish.png')
+.icon-publish
+  background-image: asset-url('icons/icon-unpublish.png')
+  -webkit-transform: rotate(180deg)
+  -moz-transform: rotate(180deg)
+  -ms-transform: rotate(180deg)
+  -o-transform: rotate(180deg)
+  transform: rotate(180deg)
 .icon-waiting
   background-image: asset-url('icons/icon-waiting.png')
 .icon-checked
