--- a/app/assets/stylesheets/daydash.sass
+++ b/app/assets/stylesheets/daydash.sass
@@ -3,5 +3,6 @@
 //= require parsley
 //= require slick
 //= require slick-theme
+//= require sweet-alert
 //= require_tree ./components
 //= require_tree ./pages
