--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -428,6 +428,13 @@ label
     a
       color: $gray-color-4
 
+    .location
+      width: 100%
+      white-space: nowrap
+      display: inline-block
+      overflow: hidden
+      text-overflow: ellipsis
+
   .title
     margin-bottom: 25px
     height: 64px
@@ -474,14 +481,14 @@ label
         padding: 10px
 
     .cover
-      height: 100px
+      height: 200px
     .info
-      padding: 0px 5px
+      padding: 10px
 
     .title
       font-size: 18px
       margin-top: 0px
-      height: auto
+      height: 75px
       line-height: 1.5em
       margin-bottom: 10px
     .meta
@@ -774,11 +781,11 @@ label
       .info
         .caption
           margin-top: 60px
-
           .title
             font-size: 32px
           .subtitle
             font-size: 20px
+
   #event-section
     background-color: #fcfcfc
     padding-top: 30px
