--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -112,9 +112,9 @@ html, body
         > a
           padding-top: 10px
           padding-bottom: 10px
-    .navbar
-      .navbar-left
-        display: none
+    // .navbar
+    //   .navbar-left
+    //     display: none
 
   @media (min-width: 992px) and (max-width: 1199px)
     .navbar
