--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -891,6 +891,8 @@ label
       margin-bottom: 50px
       line-height: 1.7em
       word-wrap: break-word
+      p
+        margin: 0px 0px 20px
     .gallery
       margin-left: -5px
       margin-right: -5px
