--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -40,7 +40,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <% if current_user.present? %>
                 <ul class="nav navbar-nav navbar-right mobile-hide">
-                  <% if current_user.can_organizer? %>
+                  <% if current_user.admin? %>
                     <li>
                       <%= link_to "<div class=\"role-badge organizer-badge nav-badge\">Admin</div>".html_safe, admin_users_path, class: 'organizer-nav' %>
                     </li>
