--- a/app/views/admin/users/transactions.html.erb
+++ b/app/views/admin/users/transactions.html.erb
@@ -7,7 +7,7 @@
         <div class="col-xs-12 col-md-12">
           <div class="transaction-list">
             <div class="list-header">
-              <h1 class="list-title">Transaction list all</h1>
+              <h1 class="list-title">Transaction list all (<%= @orders.count %> transactions)</h1>
             </div>
             <div class="list-body table-responsive">
               <table class="table table-hover">
