--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -18,6 +18,7 @@
                     <td>Email</td>
                     <td>Facebook</td>
                     <td>Gender</td>
+                    <td>created_at</td>
                   </tr>
                 </thead>
                 <tbody>
@@ -28,6 +29,7 @@
                     <td><%= user.email %></td>
                     <td><%= user.uid %></td>
                     <td><%= user.gender %></td>
+                    <td><%= user.created_at %></td>
                   </tr>
                   <% end %>
                 </tbody>
