--- a/app/views/admin/users/transactions.html.erb
+++ b/app/views/admin/users/transactions.html.erb
@@ -21,6 +21,7 @@
                     <td>QTY</td>
                     <td>Type</td>
                     <td>Amount</td>
+                    <td>created_at</td>
                   </tr>
                 </thead>
                 <tbody>
@@ -34,6 +35,7 @@
                     <td><%= order.tickets.count %></td>
                     <td><%= order.payment.channel %></td>
                     <td><%= order.payment.amount %></td>
+                    <td><%= order.created_at %></td>
                   </tr>
                   <% end %>
                 </tbody>
