--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,5 +1,5 @@
 @import 'bootstrap-sprockets'
 @import 'bootstrap'
 @import 'bootstrap-datetimepicker'
-@import "font-awesome-sprockets"
-@import "font-awesome"
+@import 'font-awesome-sprockets'
+@import 'font-awesome'
