--- a/app/views/layouts/parts/_nav.html.erb
+++ b/app/views/layouts/parts/_nav.html.erb
@@ -17,7 +17,7 @@
             <%= link_to "ALL USER", admin_users_path %>
           </li>
           <li id="menu-transaction-list">
-            <%= link_to "ALL Transaction", admin_transactions_path %>
+            <%#= link_to "ALL Transaction", admin_transactions_path %>
           </li>
         <% end %>
         <li id="menu-event-list">
