--- a/app/views/admin/users/transactions.html.erb
+++ b/app/views/admin/users/transactions.html.erb
@@ -34,7 +34,7 @@
                     <td><%= order.user.try(:phone) %></td>
                     <td><%= order.tickets.try(:count) %></td>
                     <td><%= order.payment.try(:channel) %></td>
-                    <td><%= order.payment.try(:amount) %></td>
+                    <td><%= convert_to_currency(order.payment.try(:to_amount)) %></td>
                     <td><%= order.created_at %></td>
                   </tr>
                   <% end %>
