--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -105,7 +105,7 @@
               </div>
               <div class="col-xs-12 col-md-6">
                 <div class="form-group">
-                  <label>Cover</label>
+                  <label>Cover (1600x500px - 1 ภาพ)</label>
                   <input class="form-control" type="file" name="cover" data-parsley-required="true" />
                 </div>
                 <div class="image-list row">
@@ -114,7 +114,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label>Facebook og</label>
+                  <label>Facebook og (1200x630px - 1 ภาพ)</label>
                   <input class="form-control" type="file" name="social_share" data-parsley-required="true" />
                 </div>
                 <div class="image-list row">
@@ -123,7 +123,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label>Images</label>
+                  <label>Images (1200x800px - ไม่จำกัดจำนวน)</label>
                   <input class="form-control" type="file" name="event_pictures[]" multiple data-parsley-required="true" />
                 </div>
                 <div class="image-list sortable row">
