--- a/app/views/admin/users/transactions.html.erb
+++ b/app/views/admin/users/transactions.html.erb
@@ -21,7 +21,8 @@
                     <td>QTY</td>
                     <td>Type</td>
                     <td>Amount</td>
-                    <td>created_at</td>
+                    <td>Created_at</td>
+                    <td colspan="2"></td>
                   </tr>
                 </thead>
                 <tbody>
@@ -35,7 +36,16 @@
                     <td><%= order.tickets.try(:count) %></td>
                     <td><%= order.payment.try(:channel) %></td>
                     <td><%= convert_to_currency(order.payment.try(:to_amount)) %></td>
-                    <td><%= order.created_at %></td>
+                    <td><%= order.to_created_at %></td>
+
+                    <% if order.pending? || order.status.cancel? %>
+                      <td colspan="2"><%= link_to "Approve", admin_approve_path(order.id), method: :put %></td>
+                    <% elsif order.paid? %>
+                      <td><%= link_to "Cancel", admin_cancel_path(order.id), method: :put %></td>
+                      <td><%= link_to "Send Email", admin_send_email_path(order.id), method: :post  %></td>
+                    <% else %>
+                      <td colspan="2"></td>
+                    <% end %>
                   </tr>
                   <% end %>
                 </tbody>
