--- a/app/views/layouts_mailer/organizer/order.html.erb
+++ b/app/views/layouts_mailer/organizer/order.html.erb
@@ -23,7 +23,7 @@
                     <table width="100%">
                       <tr>
                         <td align="center">
-                          <a href="#" style="font-weight: 200; color: black;">คุณสามารถดูรายละเอียดคำสั่งซื้อทั้งหมดของอีเว้นท์นี้ได้โดยคลิกที่นี่</a>
+                          <a href="<%= @link_to_order %>" style="font-weight: 200; color: black;">คุณสามารถดูรายละเอียดคำสั่งซื้อทั้งหมดของอีเว้นท์นี้ได้โดยคลิกที่นี่</a>
                         </td>
                       </tr>
                     </table>
