--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -883,6 +883,16 @@ label
         float: left
         margin-top: 1px
         margin-right: 5px
+    .why-this ul
+      li
+        font-size: 18px
+        line-height: 35px
+    .guarantee
+      background: #F5F9F8
+      text-align: center
+      padding: 40px 0px
+      font-size: 14px
+      margin-bottom: 20px
     .description
       font-family: sans-serif
       font-size: 16px
@@ -928,6 +938,18 @@ label
         *
           vertical-align: text-top
 
+    .buy-panel
+      height: 240px
+      position: relative
+      top: -60px
+      background: #fff
+      border: 1px solid #eee
+      box-shadow: 0px 1px #eee
+      padding: 20px
+      padding-top: 130px
+      .comment
+        text-align: center
+        font-size: 12px
     @media (max-width: 991px)
       padding-top: 15px
 
