--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -13,6 +13,18 @@
           letter-spacing: 0.04em;">Daydash Exclusive</span>
       <% end %>
       <h1 class="title"><%= @event.title %></h1>
+      <div class="col-xs-12 col-md-8">
+        <div class="row">
+          <div class="col-xs-6">
+            <div class="meta date" style="color: #fff"><i class="icon icon-xs icon-calendar"></i> <%= @event.to_uptime %></div>
+          </div>
+          <div class="col-xs-6">
+            <div class="meta location" id="location" data-location="<%= @event.location_name %>"><i class="icon icon-xs icon-map-pin"></i>
+              <a href="https://www.google.co.th/maps?q=loc:<%= @event.latitude %>,<%= @event.longitude %>"  style="color: #fff" target="_blank"><%= @event.location_name %></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -21,15 +33,61 @@
     <div class="row">
       <div class="col-xs-12 col-md-7">
         <div class="row">
-          <div class="meta-list col-xs-12">
-            <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @event.to_uptime %></div>
-            <div class="meta location" id="location" data-location="<%= @event.location_name %>"><i class="icon icon-xs icon-map-pin"></i> <a href="https://www.google.co.th/maps?q=loc:<%= @event.latitude %>,<%= @event.longitude %>" target="_blank"><%= @event.location_name %></a></div>
+          <div class="col-xs-12 col-md-4">
+            <div class="row">
+              <div class="col-xs-2 col-md-12">
+                <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px'  %>
+              </div>
+              <div class="col-xs-10 col-md-12">
+                <p style="margin-top: 20px; font-size: 12px;">Organised By</p>
+                <h3 style="margin-top: 0;"><%= @event.user.company %></h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-8">
+            <h2>Why this?</h2>
+            <div class="why-this">
+              <ul>
+                <li>เวิร์คช็อปหนึ่งวันเต็มกับมืออาชีพตัวจริง</li>
+                <li>ราคารวมอุปกรณ์พร้อมให้กลับไปฝึกฝนต่อที่บ้านได้</li>
+                <li>ไม่จำเป็นต้องมีพื้นฐานมาก่อน</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <hr>
           </div>
         </div>
         <div class="description">
-            <%= auto_link(simple_format(@event.description), :link => :all, :html => {:target => "_blank"}) %>
+          <h2>Details</h2>
+          <%= auto_link(simple_format(@event.description), :link => :all, :html => {:target => "_blank"}) %>
         </div>
-        <div class="gallery row">
+        <div class="row guarantee">
+          <div class="col col-xs-6 col-md-4">
+            <i class="icon icon-xs icon-calendar"></i><br>
+            100% Guaranteed<br>
+            รับประกันความพอใจ 100%
+          </div>
+          <div class="col col-xs-6 col-md-4">
+            <i class="icon icon-xs icon-calendar"></i><br>
+            What You see is what you get <br>
+            โปร่งใส ไม่มีค่าธรรมเนียมเพิ่มเติม
+          </div>
+          <div class="col col-xs-6 col-md-4">
+            <i class="icon icon-xs icon-calendar"></i><br>
+            Secured Payment<br>
+            ชำระผ่านบัตรเครดิตที่ปลอดภัย
+          </div>
+        </div>
+        <% if @event.instruction.present? %>
+        <div class="instruction">
+          <h2>More Details and Conditions</h2>
+          <%= auto_link(simple_format(@event.instruction), :link => :all, :html => {:target => "_blank"}) %>
+        </div>
+        <% end %>
+        <div class="row gallery">
           <% @event.event_pictures.each do |image| %>
           <div class="col col-xs-6 col-md-4">
             <a class="image" style="background-image: url(<%= image.try(:media, :thumb) %>);" data-toggle="lightbox" href="<%= image.try(:media, :thumb) %>" data-parent=".gallery" data-gallery="multiimages"></a>
@@ -39,13 +97,32 @@
       </div>
       <div class="col-md-1"></div>
       <div class="col-xs-12 col-md-4">
-        <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1 btn-buy" data-toggle="modal" data-target="#ticket-list-modal">
+        <div class="buy-panel">
+          <div style="position: absolute;top: 30px;">
+            เริ่มต้นที่
+          </div>
+          <div style="position: absolute;top: 50px;font-size: 34px;">
+            ฿2,500
+          </div>
+          <div style="position: absolute;top: 50px;right: 20px;">
+            จากราคาปกติ: ฿2,800
+          </div>
+          <div style="position: absolute;top: 70px;right: 20px;color: #D85B56;">
+            ลดไป ฿300 (11% off)
+          </div>
+
+          <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1 btn-buy" data-toggle="modal" data-target="#ticket-list-modal">
+            Buy Ticket
+          </button>
+          <p class="comment">* เลือกจำนวนและชนิดของบัตรในขั้นตอนต่อไป</p>
+        </div>
+        <!-- <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1 btn-buy" data-toggle="modal" data-target="#ticket-list-modal">
           <% if @section.price == 0 %>
             รับบัตร<%= convert_to_currency(@section.price) %>
           <% else %>
             ซื้อบัตร - <%= "เริ่มที่" if @section_count > 1 %> <%= convert_to_currency(@section.price) %>
           <% end %>
-        </button>
+        </button> -->
         <div class="map-panel">
           <div id="google-map" data-lat="<%= @event.latitude %>" data-lng="<%= @event.longitude %>"></div>
         </div>
