--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -890,9 +890,11 @@ label
     .guarantee
       background: #F5F9F8
       text-align: center
-      padding: 40px 0px
       font-size: 14px
       margin-bottom: 20px
+      padding: 20px 0px
+      .col
+        padding: 20px 0px
     .description
       font-family: sans-serif
       font-size: 16px
@@ -968,6 +970,8 @@ label
         margin-bottom: 0px
         font-size: 20px
 
+      .buy-panel
+        display: none
       .map-panel
         #google-map
           height: 200px
