organizer profile and organizer setting
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -791,6 +791,17 @@ label
           font-weight: bold
         .subtitle
           font-size: 24px
+      .organizer
+        margin-top: 100px
+        text-align: center
+        color: white
+        text-shadow: 0px 1px rgba(0, 0, 0, 0.3)
+        .title
+          font-family: "Kanit", "Helvetica Neue", "sans-serif"
+          font-size: 48px
+          font-weight: bold
+        .social
+          font-size: 24px
 
     @media (max-width: 991px)
       .page-cover
