--- a/app/assets/stylesheets/components/icon.sass
+++ b/app/assets/stylesheets/components/icon.sass
@@ -10,6 +10,9 @@
 .icon-xs
   width: 16px
   height: 16px
+.icon-md
+  width: 24px
+  height: 24px
 .icon-lg
   width: 64px
   height: 64px
@@ -55,6 +58,8 @@
   background-image: asset-url('icons/icon-waiting.png')
 .icon-checked
   background-image: asset-url('icons/icon-checked.png')
+.icon-verified
+  background-image: asset-url('icons/icon-verified.png')
 .icon-envelope
   background-image: asset-url('icons/icon-envelope.png')
 .icon-chrome
@@ -79,3 +84,13 @@
   background-image: asset-url('icons/icon-lock.png')
 .icon-close
   background-image: asset-url('icons/icon-close.png')
+
+.icon-check-guarantee
+  background-image: asset-url('icons/icon-check-guarantee-24px@2x.png')
+.icon-check-like
+  background-image: asset-url('icons/icon-check-like-24px@2x.png')
+.icon-check-lock
+  background-image: asset-url('icons/icon-check-lock-24px@2x.png')
+
+.icon-map-pin
+  background-image: asset-url('icons/map-pin-blue-32px@2x.png')
