--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -895,9 +895,11 @@ label
         margin-top: 1px
         margin-right: 5px
     .why-this ul
-      li
+      li:before
         font-size: 18px
         line-height: 35px
+        list-style-image: asset-url('icons/icon-check-guarantee.png')
+
     .guarantee
       background: #F5F9F8
       text-align: center
@@ -914,6 +916,11 @@ label
       margin-bottom: 50px
       line-height: 1.7em
       word-wrap: break-word
+      h2
+        font-family: "Athiti"
+        font-weight: 500
+        line-height: 1.1
+        color: inherit
       p
         margin: 0px 0px 20px
     .gallery
@@ -933,6 +940,7 @@ label
     .btn-daydash-lg
       margin-bottom: 15px
     .map-panel
+      margin-top: -40px
       margin-bottom: 15px
       border-radius: 2px
       background: $gray-color-e
@@ -950,19 +958,23 @@ label
         text-align: center
         *
           vertical-align: text-top
-
     .buy-panel
+      font-family: sans-serif
       height: 240px
       position: relative
       top: -60px
       background: #fff
       border: 1px solid #eee
-      box-shadow: 0px 1px #eee
+      box-shadow: 0px 4px 20px 2px rgba(0, 0, 0, 0.1)
       padding: 20px
-      padding-top: 130px
+      padding-top: 110px
+      border-radius: 2px
       .comment
         text-align: center
         font-size: 12px
+      .btn-buy
+        border-radius: 2px
+        box-shadow: inset 0px -4px
     @media (max-width: 991px)
       padding-top: 15px
 
