--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -36,16 +36,19 @@
           <div class="col-xs-12 col-md-4">
             <div class="row">
               <div class="col-xs-2 col-md-12">
-                <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px'  %>
+                <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px' %>
+                <div style="position: absolute; top: 50px; left: 70px">
+                  <i class="icon icon-xs icon-verified"></i>
+                </div>
               </div>
               <div class="col-xs-10 col-md-12">
-                <p style="margin-top: 20px; font-size: 12px;">Organised By</p>
-                <h3 style="margin-top: 0;"><%= @event.user.company %></h3>
+                <p style="margin-top: 20px; font-size: 12px;">Organized By</p>
+                <h3 style="margin-top: 0;"><%= link_to  @event.user.company, organizer_path(@event.user.username), style: 'color: #000' %></h3>
               </div>
             </div>
           </div>
           <div class="col-xs-12 col-md-8">
-            <h2>Why this?</h2>
+            <h2>Why This?</h2>
             <div class="why-this">
               <ul>
                 <li>เวิร์คช็อปหนึ่งวันเต็มกับมืออาชีพตัวจริง</li>
@@ -60,25 +63,37 @@
             <hr>
           </div>
         </div>
-        <div class="description">
+        <div class="row description">
           <h2>Details</h2>
           <%= auto_link(simple_format(@event.description), :link => :all, :html => {:target => "_blank"}) %>
         </div>
         <div class="row guarantee">
           <div class="col col-xs-12 col-md-4">
-            <i class="icon icon-xs icon-calendar"></i><br>
-            100% Guaranteed<br>
-            รับประกันความพอใจ 100%
+            <p>
+              <i class="icon icon-md icon-check-guarantee"></i>
+            </p>
+            <p>
+              100% Guaranteed<br>
+              รับประกันความพอใจ 100%
+            </p>
           </div>
           <div class="col col-xs-12 col-md-4">
-            <i class="icon icon-xs icon-calendar"></i><br>
-            What You see is what you get <br>
-            โปร่งใส ไม่มีค่าธรรมเนียมเพิ่มเติม
+            <p>
+              <i class="icon icon-md icon-check-like"></i>
+            </p>
+            <p>
+              What You see is what you get <br>
+              โปร่งใส ไม่มีค่าธรรมเนียมเพิ่มเติม
+            </p>
           </div>
           <div class="col col-xs-12 col-md-4">
-            <i class="icon icon-xs icon-calendar"></i><br>
-            Secured Payment<br>
-            ชำระผ่านบัตรเครดิตที่ปลอดภัย
+            <p>
+              <i class="icon icon-md icon-check-lock"></i>
+            </p>
+            <p>
+              Secured Payment<br>
+              ชำระผ่านบัตรเครดิตที่ปลอดภัย
+            </p>
           </div>
         </div>
         <% if @event.instruction.present? %>
@@ -124,7 +139,7 @@
           <% end %>
         </button> -->
         <div class="map-panel">
-          <div id="google-map" data-lat="<%= @event.latitude %>" data-lng="<%= @event.longitude %>"></div>
+          <div id="google-map" data-lat="<%= @event.latitude %>" data-lng="<%= @event.longitude %>" data-icon-map-pin="<%= asset_url('icons/map-pin-blue-32px@2x.png') %>"></div>
         </div>
         <div class="social-panel">
           <div class="row">
