calendar icon & location icon
———

- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/assets/stylesheets/components/icon.sass
+++ b/app/assets/stylesheets/components/icon.sass
@@ -35,10 +35,14 @@
   background-image: asset-url('icons/icon-twitter.png')
 .icon-twitter-color
   background-image: asset-url('icons/icon-twitter-color.png')
-.icon-map-pin
+.icon-location
   background-image: asset-url('icons/icon-map-pin.png')
 .icon-calendar
   background-image: asset-url('icons/icon-calendar.png')
+.icon-location-white
+  background-image: asset-url('icons/icon-location.png')
+.icon-calendar-white
+  background-image: asset-url('icons/icon-calendar-16px@2x.png')
 .icon-order
   background-image: asset-url('icons/icon-order.png')
 .icon-checkin
@@ -91,6 +95,3 @@
   background-image: asset-url('icons/icon-check-like-24px@2x.png')
 .icon-check-lock
   background-image: asset-url('icons/icon-check-lock-24px@2x.png')
-
-.icon-map-pin
-  background-image: asset-url('icons/map-pin-blue-32px@2x.png')
