--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -451,6 +451,7 @@ label
       display: inline-block
       overflow: hidden
       text-overflow: ellipsis
+      float: left
 
   .title
     margin-bottom: 25px
