--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -27,7 +27,7 @@
                         <a class="cover" style="background-image: url(<%= order.event.get_thumbnail %>);" target="_blank" href="<%= client_event_path(order.event.id) %>"></a>
                         <h4 class="title"><a target="_blank" href="<%= client_event_path(order.event.id) %>"><%= order.event.title %></a></h4>
                         <div class="info-2">
-                          <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= order.event.location_name %></div>
+                          <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= order.event.location_name %></div>
                         </div>
                       </div>
                       <div class="col-xs-12 col-md-6 right">
