--- a/app/views/client/profile/wishlist.html.erb
+++ b/app/views/client/profile/wishlist.html.erb
@@ -24,7 +24,7 @@
                       <%= link_to event.title, client_event_path(event.to_url) %>
                     </h4>
                     <div class="meta date"><i class="icon icon-xs icon-calendar"></i> วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
-                    <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> Thonglor House Club, ซอยทองหล่อ</div>
+                    <div class="meta location"><i class="icon icon-xs icon-location"></i> Thonglor House Club, ซอยทองหล่อ</div>
                   </div>
                 </div>
               </div>
