--- a/app/views/organizer/profile/show.html.erb
+++ b/app/views/organizer/profile/show.html.erb
@@ -54,7 +54,7 @@
             <div class="info">
               <h4 class="title text-left"><%= event.title %></h4>
               <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
-              <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= event.location_name %></div>
+              <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
             </div>
           <% end %>
         </div>
