--- a/app/views/client/events/checkout.html.erb
+++ b/app/views/client/events/checkout.html.erb
@@ -14,7 +14,7 @@
 
             <ul class="meta list-inline">
               <li><i class="icon icon-xs icon-calendar"></i> <%= @event.to_uptime %></li>
-              <li><i class="icon icon-xs icon-map-pin"></i> <%= @order.event.location_name %></li>
+              <li><i class="icon icon-xs icon-location"></i> <%= @order.event.location_name %></li>
             </ul>
           </div>
           <div class="panel-body">
@@ -179,7 +179,7 @@
                 <%= link_to event.title, client_event_path(event.to_url) %>
               </h4>
               <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %> </div>
-              <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= event.location_name %> </div>
+              <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %> </div>
             </div>
           </div>
         </div>
