--- a/app/assets/stylesheets/components/icon.sass
+++ b/app/assets/stylesheets/components/icon.sass
@@ -19,6 +19,8 @@
 
 .icon-menu
   background-image: asset-url('icons/icon-menu.png')
+.icon-website
+  background-image: asset-url('icons/url-outline-22px@2x.png')
 .icon-facebook
   background-image: asset-url('icons/icon-facebook.png')
 .icon-facebook-color
