--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -793,14 +793,15 @@ label
         .subtitle
           font-size: 24px
       .organizer
-        margin-top: 100px
+        font-family: "Athiti"
+        margin-top: 50px
         text-align: center
         color: white
         text-shadow: 0px 1px rgba(0, 0, 0, 0.3)
         .title
-          font-family: "Kanit", "Helvetica Neue", "sans-serif"
-          font-size: 48px
-          font-weight: bold
+          // font-family: "Kanit", "Helvetica Neue", "sans-serif"
+          font-size: 30px
+          font-weight: 100
         .social
           font-size: 24px
 
