--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -30,7 +30,7 @@
               <div class="col-xs-2 col-md-12">
                 <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px' %>
                 <div style="position: absolute; top: 50px; left: 70px">
-                  <i class="icon icon-xs icon-verified"></i>
+                  <i class="icon icon-md icon-verified"></i>
                 </div>
               </div>
               <div class="col-xs-10 col-md-12">
