--- a/app/assets/stylesheets/components/icon.sass
+++ b/app/assets/stylesheets/components/icon.sass
@@ -97,3 +97,6 @@
   background-image: asset-url('icons/icon-check-like-24px@2x.png')
 .icon-check-lock
   background-image: asset-url('icons/icon-check-lock-24px@2x.png')
+
+.icon-direction-flag
+  background-image: asset-url('icons/icon-direction-flag-16px@2x.png')
