--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -897,6 +897,7 @@ label
         margin-top: 1px
         margin-right: 5px
     .why-this ul
+      padding-left: 30px
       li
         font-weight: inherit
         font-size: 14px
