--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -242,4 +242,23 @@
     </script>
     <!-- End of Async Drift Code -->
   <% end %>
+
+  <script type="text/javascript">
+
+    $(document).ready(function(){
+      var initSlick;
+      initSlick = function() {
+        return $('#cover-slick').not('.slick-initialized').slick({
+          infinite: true,
+          dots: false,
+          arrows: false,
+          fade: true,
+          autoplay: true,
+          autoplaySpeed: 4000
+        });
+      };
+
+      initSlick();
+    });
+  </script>
 </html>
