--- a/app/assets/stylesheets/daydash.scss
+++ b/app/assets/stylesheets/daydash.scss
@@ -1,6 +1,7 @@
 //= require jquery-ui
-//= require parsley
 //= require slick
 //= require slick-theme
 //= require_tree ./components
 //= require_tree ./pages
+
+@import 'parsley';
