--- a/app/assets/stylesheets/daydash.scss
+++ b/app/assets/stylesheets/daydash.scss
@@ -2,6 +2,7 @@
 //= require slick
 //= require slick-theme
 //= require_tree ./components
-//= require_tree ./pages
+//= require_tree ./customs
+//= require_tree ./responsives
 
 @import 'parsley';
