--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -105,18 +105,18 @@
         </div>
       </div>
       <div class="col-md-1"></div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-md-4 event-right-panel">
         <div class="buy-panel">
-          <div style="position: absolute;top: 30px;">
+          <div style="position: absolute; top: 30px;">
             เริ่มต้นที่
           </div>
-          <div style="position: absolute;top: 50px;font-size: 34px;">
+          <div style="position: absolute; top: 50px; font-size: 34px;">
             <%= convert_to_currency(@section.price) %>
           </div>
-          <!-- <div style="position: absolute;top: 50px;right: 20px;">
+          <!-- <div style="position: absolute; top: 50px; right: 20px;">
             จากราคาปกติ: ฿2,800
           </div>
-          <div style="position: absolute;top: 70px;right: 20px;color: #D85B56;">
+          <div style="position: absolute; top: 70px; right: 20px; color: #D85B56;">
             ลดไป ฿300 (11% off)
           </div> -->
 
@@ -125,13 +125,6 @@
           </button>
           <p class="comment">* เลือกจำนวนและชนิดของบัตรในขั้นตอนต่อไป</p>
         </div>
-        <!-- <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1 btn-buy" data-toggle="modal" data-target="#ticket-list-modal">
-          <% if @section.price == 0 %>
-            รับบัตร<%= convert_to_currency(@section.price) %>
-          <% else %>
-            ซื้อบัตร - <%= "เริ่มที่" if @section_count > 1 %> <%= convert_to_currency(@section.price) %>
-          <% end %>
-        </button> -->
         <div class="map-panel">
           <div id="google-map" data-lat="<%= @event.latitude %>" data-lng="<%= @event.longitude %>" data-icon-map-pin="<%= asset_url('icons/map-pin-blue-32px@2x.png') %>"></div>
         </div>
