--- a/app/views/layouts/parts/_nav.html.erb
+++ b/app/views/layouts/parts/_nav.html.erb
@@ -19,10 +19,10 @@
             }
           </style>
           <li id="menu-user-list">
-            <%= link_to "ALL USER", admin_users_path %>
+            <%= link_to "ALL USER", manage_users_path %>
           </li>
           <li id="menu-transaction-list">
-            <%= link_to "ALL Transaction", admin_transactions_path %>
+            <%= link_to "ALL Transaction", manage_transactions_path %>
           </li>
         <% end %>
         <li id="menu-event-list">
