--- a/app/assets/stylesheets/customs/events.scss
+++ b/app/assets/stylesheets/customs/events.scss
@@ -858,6 +858,7 @@ label{
       padding-top: 110px;
       border-radius: 2px;
       margin-bottom: 15px;
+      position: relative;
       .comment {
         text-align: center;
         font-size: 12px;}
