--- a/app/views/organizer/parts/_section.html.erb
+++ b/app/views/organizer/parts/_section.html.erb
@@ -42,6 +42,7 @@
     <td><input class="form-control" required="" type="text" name="new_ticket_names[]" value="" placeholder="eg. General, VIP" /></td>
     <td><input class="form-control" required="" type="number" name="new_ticket_totals[]" value="" /></td>
     <td><input class="form-control" required="" type="number" name="new_ticket_prices[]" value="" /></td>
+    <td><input class="form-control" required="" type="number" name="new_ticket_initials[]" value="" /></td>
     <td><input class="form-control" type="number" name="new_ticket_units[]" value="" /></td>
 
     <td width="200">
